优化代码结构，更新依赖关系，重命名变量以提高可读性